--- a/docker/env/.env.local
+++ b/docker/env/.env.local
@@ -1,19 +1,19 @@
 #———————————————————————————————————————#
 # DOMAIN                                #
 #———————————————————————————————————————#
-PROJECT_NAME=keep-up-app-preprod
+PROJECT_NAME=keep-up-app-local
 
 #———————————————————————————————————————#
 # DOMAIN                                #
 #———————————————————————————————————————#
-APP_DOMAIN=app.keep-up.leomurail.fr
+APP_DOMAIN=app.keep-up.traefik.me
 APP_PORT=3060
 
 #———————————————————————————————————————#
 # ENV                                   #
 #———————————————————————————————————————#
 # development | production
-NODE_ENV=production
+NODE_ENV=development
 
 # local | dev | preprod | prod
-APP_ENV=preprod
+APP_ENV=local
