--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
-name: ${PROJECT_NAME}_${NODE_ENV}
+name: ${APP_NAME}_${NODE_ENV}
 services:
   app:
-    container_name: ${PROJECT_NAME}.${NODE_ENV}
-    image: ${PROJECT_NAME}.${NODE_ENV}:latest
+    container_name: ${APP_NAME}.${NODE_ENV}
+    image: ${APP_NAME}.${NODE_ENV}:latest
     build:
       context: .
       dockerfile: docker/Dockerfile
@@ -18,11 +18,11 @@ services:
       - default
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.${PROJECT_NAME}.rule=Host(`${APP_DOMAIN}`)"
-      - "traefik.http.routers.${PROJECT_NAME}.entrypoints=websecure"
-      - "traefik.http.routers.${PROJECT_NAME}.tls=true"
-      - "traefik.http.routers.${PROJECT_NAME}.tls.certresolver=myresolver"
-      - "traefik.http.services.${PROJECT_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}`)"
+      - "traefik.http.routers.${APP_NAME}.entrypoints=websecure"
+      - "traefik.http.routers.${APP_NAME}.tls=true"
+      - "traefik.http.routers.${APP_NAME}.tls.certresolver=myresolver"
+      - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
 networks:
   traefik-net:
     external: true
