--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,12 +19,12 @@ services:
     networks:
       - traefik-net
     labels:
-      traefik.enable: true
-      traefik.http.routers.${APP_NAME}.rule: Host(`${APP_DOMAIN}`)
-      traefik.http.routers.${APP_NAME}.entrypoints: websecure
-      traefik.http.routers.${APP_NAME}.tls: true
-      traefik.http.routers.${APP_NAME}.tls.certresolver: myresolver
-      traefik.http.services.${APP_NAME}.loadbalancer.server.port: ${APP_PORT}
+      - "traefik.enable=true"
+      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}`)"
+      - "traefik.http.routers.${APP_NAME}.entrypoints=websecure"
+      - "traefik.http.routers.${APP_NAME}.tls=true"
+      - "traefik.http.routers.${APP_NAME}.tls.certresolver=myresolver"
+      - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
 networks:
   traefik-net:
     external: true
