--- a/docker/docker-compose.local.yaml
+++ b/docker/docker-compose.local.yaml
@@ -1,6 +1,6 @@
 services:
   app:
     labels:
-      traefik.http.routers.${APP_NAME}.entrypoints: web
-      traefik.http.routers.${APP_NAME}.tls: false
-      traefik.http.routers.${APP_NAME}.tls.certresolver: ""
+      - "traefik.http.routers.${APP_NAME}.entrypoints=web"
+      - "traefik.http.routers.${APP_NAME}.tls=false"
+      - "traefik.http.routers.${APP_NAME}.tls.certresolver="
